--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,18 @@
     <string name="title_activity_principal_menu">PrincipalMenuActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_title">Usuario</string>
+    <string name="nav_icon_users">GESTIÓN DE USUARIOS</string>
+    <string name="nav_icon_user">USUARIOS</string>
+    <string name="nav_icon_tools">ROLES</string>
+    <string name="nav_icon_menus">MENUS</string>
+    <string name="nav_icon_rolenlace">ROL ENLACE</string>
+    <string name="nav_icon_inventario">GESTIÓN DE INVENTARIO</string>
+    <string name="nav_icon_banco">GESTIÓN DE BANCO</string>
+    <string name="nav_icon_proovedores">GESTIÓN DE PROOVEDORES</string>
+    <string name="nav_icon_consulta">GESTIÓN DE CONSULTA</string>
+    <string name="nav_header_correo">Correo</string>
+    <string name="nav_header_rol">Rol</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
